# InsightEN

./: .gitignore  .pre-commit-config.yaml  README.md  logger_config.py  pyproject.toml  requirements.txt  scanner.py  test_scanner.py
scripts/: run_tests-cov.sh
